fix: 메인 모달창 다크모드, 슬롯 z-index, 설문조사 반응형 레이아웃 수정

--- a/src/app/_components/Modal.module.scss
+++ b/src/app/_components/Modal.module.scss
@@ -19,15 +19,18 @@
     padding: 3rem;
 
     .title {
+      color: #232323;
       font-family: Pretendard, sans-serif;
       font-size: 2rem;
       font-weight: bold;
       margin-bottom: 3rem;
     }
     .subTitle {
+      color: #232323;
       font-size: 1.25rem;
       font-weight: bold;
       margin-bottom: .625rem;
+      text-align: left;
     }
 
     // .submitForm {
@@ -50,10 +53,6 @@
     .checkbox {
       flex-basis: 20%;
       margin-bottom: .3rem;
-    }
-    .checkbox input[type="checkbox"] {
-      //display: none;
-      
     }
 
     .checkbox .label {
